# seoder

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  config.txt  dev.sh  sys_config.rs
.github/workflows/: publish.yml  rust.yml
_db/campaigns/: README.md
_db/campaigns/_c1/valid/: config.txt  links.txt
_db/campaigns/_c2/valid/: links.txt
_db/campaigns/_c3/valid/: links.txt
_db/campaigns/_c4/valid/: links.txt
_db/campaigns/_c5/valid/: links.txt
_db/engines/: README.md
_db/files/: README.md
_engines_/: README.md  patterns.txt
_engines_/_e1/: patterns.txt
_engines_/campaign/: README.md  patterns.txt
_engines_/campaigns/: list.txt
_engines_/campaigns/_c1/valid/: links.txt
_engines_/campaigns/_c3/valid/: links.txt
_engines_/campaigns/_c4/valid/: links.txt
_engines_/vanala/: patterns.txt
benches/: Cargo.toml  README.md  crawl.rs  urls-input.txt
engines/: README.md  extract.txt
engines/campaign/: README.md  config.txt
engines/campaign/_c1/invalid/: list.txt
engines/campaign/_c1/valid/: list.txt
jsoncrawler/: Cargo.toml
jsoncrawler/src/: main.rs
jsoncrawler_client/: Cargo.toml  README.md
jsoncrawler_client/src/: main.rs
jsoncrawler_lib/: Cargo.toml  sys_config
jsoncrawler_lib/src/: lib.rs
jsoncrawler_web/: Cargo.toml  README.md
jsoncrawler_web/src/: builder.rs  main.rs  mod.rs  panel_html.rs  utils.rs
jsoncrawler_web/src/panel/: panel_css.rs  panel_html.rs  panel_js.rs
seoder/: Cargo.toml
seoder/src/: main.rs
seoder_app/: README.md
seoder_app/src/: app.js  index.html  main.css  style.css
seoder_app/src-tauri/: Cargo.toml  tauri.conf.json
seoder_app/src-tauri/src/: main.rs
seoder_lib/: Cargo.toml
seoder_lib/src/: lib.rs
seoder_marketing/: .gitignore  README.md  astro.config.mjs  package.json
seoder_marketing/public/: seoder_build_test_arch64-apple-darwin
seoder_marketing/public/media/: seoder_main.webm
seoder_marketing/public/releases/: Seoder_0.0.2_x64_en-US.msi.zip.sig  seoder_0.0.2_amd64.AppImage.tar.gz.sig
seoder_marketing/src/components/: AnchorButton.astro  Back.astro  Card.astro  Download.astro  Feature.astro  FeatureList.astro  Footer.astro  Highlight.astro  Landing.astro  LandingIO.astro  LogoLight.astro  Navbar.astro  Section.astro
seoder_marketing/src/components/Logos/: Apple.astro  Linux.astro  Windows.astro
seoder_marketing/src/components/Money/: MoneyBack.astro
seoder_marketing/src/components/Svgs/: App.astro  Bulk.astro  FooterBg.astro  Github.astro  Hero.astro  HunterIO.astro  Search.astro  Twitter.astro
seoder_marketing/src/components/Typo/: SubTitle.astro  Title.astro
seoder_marketing/src/layouts/: Layout.astro
seoder_marketing/src/pages/: 404.astro  about.astro  changelog.astro  faq.astro  index.astro  payments.astro  privacy-policy.astro  seoder-vs-zendesk-sell.astro  seos-can-be-dangerous.astro  terms-of-service.astro
seoder_marketing/src/pages/api/: [id].json.ts  keygen-account.ts  keygen-validate.ts  keygen-webhooks.ts  og.ts  og.tsx  prospect.ts  stripe-webhooks.ts
seoder_marketing/src/pages/api/update/[target]/: [...version].ts
seoder_marketing/src/pages/blog/: [id].astro  index.astro
seoder_marketing/src/pages/compare/: seoder-vs-zendesk-sell.astro
seoder_marketing/src/statics/: title.ts
seoder_marketing/src/utils/: config.ts  get-dynamic-page.ts  mailer.ts  parse-html.ts  stripe.ts  validate-keygen.ts
seoder_payments/: .env  index.js  package.json
seoder_web/: Cargo.toml  README.md
seoder_web/src/: builder.rs  ft.rs  lib.rs  main.rs  mod.rs  utils.rs
seoder_web/src/controls/: fs.rs  list.rs  mod.rs  run.rs  stats.rs
seoder_web/src/panel/: mod.rs  panel_css.rs  panel_html.rs  panel_js.rs
src/: main.rs
src-tauri/: .gitignore  Cargo.toml  README.md  astro.config.mjs  package.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/public/css/: styles.css
src-tauri/src/: main.rs
src-tauri/www/components/: Analytics.tsx  Campaign.astro  CampaignCell.tsx  CampaignCreate.astro  CampaignCreate.tsx  CampaignList.tsx  Contacts.tsx  EditFile.tsx  EmailCreate.tsx  FileUpload.tsx  Intro.astro  License.astro  LicenseInput.astro  LicenseInput.tsx  Log.astro  Log.tsx  Main.astro  MainJS.astro  MainWorkerJS.astro  Menu.astro  Modal.tsx  Program.astro  Settings.astro  Settings.tsx  SettingsBar.astro  SettingsBar.tsx  Stats.astro  Switch.astro  Switch.tsx  Tabs.tsx  TitleBar.astro  Worker.ts
src-tauri/www/components/Buttons/: NewCampaignButton.astro  RunAllButton.astro  RunSelectedButton.tsx  SettingsButton.astro
src-tauri/www/components/Empty/: Create.astro
src-tauri/www/components/Integrations/: IntegrationsView.tsx
src-tauri/www/components/Logos/: Apple.astro  Linux.astro  Logo.astro  Windows.astro
src-tauri/www/components/Svgs/: Analytics.astro  AppDetails.astro  ArrowDown.astro  ArrowUp.astro  Close.astro  Close.tsx  Folder.tsx  HunterIO.tsx  KeyWords.tsx  Link.astro  Run.tsx
src-tauri/www/css/: feed.css  styles.css
src-tauri/www/events/: sockets.ts
src-tauri/www/layouts/: Layout.astro
src-tauri/www/pages/: index.astro
src-tauri/www/stores/: app.ts  engine.ts  profile.ts
src-tauri/www/styles/: chart.css  feed.css  forms.css  license.css  styles.css
src-tauri/www/utils/: file-set.ts  singletons.ts  upload.ts
templates/: app.html  app.js  base.html  index.html  stats.js  styles.css
