[package]
name = "jsoncrawler"
version = "0.1.0"
edition = "2021"
description = "fast json web crawler with storage abilities"

[dependencies]
tokio = { version = "^1.21.0", features = [ "rt-multi-thread", "net", "macros", "sync", "time", "fs" ] }
reqwest = { version = "0.11.11", features = ["brotli", "native-tls-alpn"] }
scraper = "0.13"
url = "2.2.2"
hashbrown = { version = "0.12.3", features = [ "rayon" ] }
log = "0.4.16"
lazy_static = "1.4.0"
ua_generator = "0.3.1"
percent-encoding = "2.1.0"
env_logger = "0.9.0"
rayon = "1.5.3"
tokio-stream = "0.1.9"
