[package]
name = "jsoncrawler"
version = "0.1.0"
edition = "2021"
description = "fast json web crawler with storage abilities"
publish = false

[dependencies]
tokio = { version = "^1.21.0", features = [ "rt-multi-thread", "net", "macros", "sync", "time", "fs" ] }
reqwest = { version = "0.11.11", features = ["brotli", "gzip", "native-tls"] }
scraper = "0.13"
url = "2.2.2"
log = "0.4.16"
ua_generator = { git = "https://github.com/a11ywatch/ua_generator.git" }
percent-encoding = "2.1.0"
env_logger = "0.9.0"
jsonl = { version = "4.0.1", features = ["tokio"] }
serde_json = "1.0.85"
lazy_static = "1.4.0"
