[package]
name = "jsoncrawler"
version = "0.1.0"
edition = "2021"
description = "fast json web crawler with storage abilities"
publish = false

[dependencies]
env_logger = "0.9.0"
jsoncrawler_lib = { path = "../jsoncrawler_lib" }

[target.'cfg(all(not(target_os = "android")))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }
jemalloc-sys = { version = "0.5.0", optional = true }

[build]
rustflags = ["--cfg", "tokio_unstable"]

[profile.release]
codegen-units = 1
lto = "fat"

[features]
jemalloc = ["jemallocator", "jemalloc-sys"]
