[package]
name = "seoder"
version = "0.1.0"
edition = "2021"
description = "fast seo engine crawler with storage abilities"
publish = false

[dependencies]
env_logger = "0.9.0"
seoder_lib = { path = "../seoder_lib" }

[target.'cfg(all(not(target_os = "android")))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }
jemalloc-sys = { version = "0.5.0", optional = true }

[features]
jemalloc = ["jemallocator", "jemalloc-sys"]
