[package]
name = "seoder_lib"
version = "0.1.0"
edition = "2021"
description = "fast json web crawler with storage abilities"
publish = false
readme = "../README.md"

[dependencies]
tokio = { version = "^1.21.2", features = [ "rt-multi-thread", "net", "macros", "sync", "time", "fs", "io-util" ] }
tokio-stream = "0.1.10"
reqwest = { version = "0.11.12", features = [ "brotli", "gzip", "native-tls", "deflate", "socks" ] }
scraper = "0.13"
url = "2.3.1"
log = "0.4.16"
ua_generator = { git = "https://github.com/a11ywatch/ua_generator.git" }
percent-encoding = "2.1.0"
env_logger = "0.9.0"
serde_json = "1.0.85"
lazy_static = "1.4.0"
string_concat = "0.0.1"
num_cpus = "1.13.1"
regex = "1.6.0"