[package]
name = "seoder_web"
version = "0.1.0"
edition = "2021"
description = "fast json web crawler with storage abilities"
publish = false

[dependencies]
env_logger = "0.9.0"
futures-channel = "0.3.24"
futures-util = { version = "0.3.24", default-features = false, features = ["sink", "std"] }
seoder_lib = { path = "../seoder_lib" }
tokio-tungstenite = "*"
tungstenite = "0.17.3"
sysinfo = "0.26.2"
hyper = { version = "0.14", features = ["full"] }
const_format = "0.2.26"
serde = "1.0.145"
warp = "0.3"
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3", default-features = false }
bytes = "1.0"
lazy_static = "1.4.0"
tera = "1"
app_dirs2 = "2.5.4"

[target.'cfg(all(not(target_os = "android")))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }
jemalloc-sys = { version = "0.5.0", optional = true }

[features]
jemalloc = ["jemallocator", "jemalloc-sys"]
