[package]
name = "seoder_app"
version = "0.0.1"
description = "Seoder desktop application"
authors = ["support@seoder.com"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"
publish = false

[build-dependencies]
tauri-build = { version = "1.1.1", features = ["codegen"] }

[dependencies]
serde_json = "1.0.86"
serde = { version = "1.0.145", features = ["derive"] }
tauri = { version = "1.1.1", features = ["dialog-all", "fs-read-file", "fs-write-file", "shell-open", "updater", "window-all"] }
seoder_web = { path = "../seoder_web" }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
